<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.sambovisal.minozchat.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_minoz"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:layout_below="@+id/log_bin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_app"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />

    <Button
        android:id="@+id/log_bin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="38dp"
        android:background="@color/colorAccent"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="0dp"
        android:text="@string/already_have_account"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="406dp" />

</RelativeLayout>
